# simple-static-analyzer

./: CMakeLists.txt  README  README.md  SimpleErrorChecker.cpp
example/: output.html
test/: diffFnOutParam_false.c  diffFnOutParam_true.c  diffFnReturn_false.c  diffFnReturn_true.c  sameFnIf_false.c  sameFnIf_true.c  sameFn_false.c  sameFn_true.c
